fixed landing page alignment

--- a/static/style.css
+++ b/static/style.css
@@ -2041,6 +2041,7 @@
                 top: 0;
                 bottom: 0;
                 padding-top: 250px;
+                align-items: center;
             }
             
             @media all and (max-width: 1055px) {
@@ -2058,7 +2059,6 @@
             .landingpageinforight,
             .landingpageinfoleft {
                 color: black;
-                height: fit-content;
                 width: 100%;
             }
             
